copy second branch in repository

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ i﻿<!DOCTYPE html>
 		<h3>h3</h3>
 		<h4>h4</h4>
 		<h5>secure user name and password and is safe</h5>
+		<h6>copy second branch</h6>
 
         <p>برنامه نویسی وب رو خیلی راحت فرا خواهید گرفت</p>
 
